# z-image-studio

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  engine.py  main.py  patch_cli_info.py  patch_cli_info_fix.py  patch_cli_info_fix2.py  patch_cli_info_fix3.py  patch_cli_info_fix4.py  patch_cli_info_imports.py  patch_cli_info_imports_2.py  patch_cli_limits.py  patch_js_limits.py  patch_js_limits_fix.py  patch_js_models.py  patch_mcp_limits.py  patch_mcp_limits_schema.py  patch_paths.py  patch_server_info.py  patch_server_info_fix.py  patch_server_info_fix2.py  patch_server_limits.py  patch_server_models.py  patch_test_cli_info.py  pyinstaller.spec  pyproject.toml  server.py  test_paths.py  test_server_info.py
.github/: FUNDING.yml
.github/workflows/: clear-docker-images.yml  release-docker.yml  release-macos.yml  release-pypi.yml  release-windows.yml
docs/: architecture.md
docs/.planning/: 41-windows-installer-plan.md  rocm-support-plan.md
homebrew/: z-image-studio.rb
installer/windows/: z-image-studio.iss
packaging/homebrew/: z-image-studio.rb
packaging/macos/Resources/: icon.icns
packaging/macos/pyinstaller/: macos.spec
packaging/macos/scripts/: build-macos.sh
packaging/macos/scripts/launchers/: macos-launcher.sh
packaging/windows/installer/: z-image-studio.iss
packaging/windows/pyinstaller/: windows.spec
packaging/windows/scripts/: build-windows.bat  build-windows.sh
packaging/windows/scripts/launchers/: windows-launcher.py  windows-webui-launcher.bat
scripts/: build-windows.sh  windows-webui-launcher.bat
src/zimage/: cli.py  db.py  engine.py  hardware.py  logger.py  mcp_server.py  migrations.py  network_utils.py  paths.py  sdnq_policy.py  server.py  storage.py  worker.py
src/zimage/static/: index.html  manifest.json
src/zimage/static/css/: app.css
src/zimage/static/i18n/: en.json  ja.json  zh-CN.json  zh-TW.json  zh.json
src/zimage/static/js/: i18n-loader.js  main.js  theme.js  utils.js
static/: index.html
tests/: README.md  manual_test_mps.py  manual_test_share_copy_buttons.md  test_cli_info.py  test_cli_models_remove.py  test_mcp_integration.py  test_mcp_response.py  test_mcp_sse_app.py  test_mcp_streamable_http.py  test_network_utils.py  test_precision_case_insensitive.py  test_rocm_support.py  test_sdnq_policy.py  test_seed_generation_integration.py  test_web_server_seed.py
