[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "z-image-studio"
version = "0.1.0"
description = "Z-Image Studio: local image toolkit (CLI + Web UI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "diffusers",
    "fastapi>=0.123.0",
    "python-multipart>=0.0.20",
    "sdnq",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
]

[project.scripts]
zimg = "zimage.cli:main"

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers" }
sdnq = { git = "https://github.com/Disty0/sdnq" }

[tool.hatch.build.targets.wheel]
packages = ["src/zimage"]

