[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "z-image-studio"
version = "0.1.0.dev39"
description = "Z-Image Studio: local image toolkit (CLI + Web UI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "diffusers>=0.36.0",
    "fastapi>=0.123.0",
    "peft>=0.18.0",
    "platformdirs>=4.0.0",
    "psutil>=5.9.0",
    "python-multipart>=0.0.20",
    "sdnq>=0.1.3",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
    "mcp>=1.23.2",
]

[project.scripts]
zimg = "zimage.cli:main"
zimg-mcp = "zimage.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zimage"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "httpx",
    "Pillow",  # For test image creation
    "pyinstaller>=6.0.0",  # For building Windows executable
]

[build-dependencies]
pyinstaller = { version = ">=6.0.0", optional = true }

[project.optional-dependencies]
build = ["pyinstaller>=6.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

